# Libft

./: .gitignore  CMakeLists.txt  Makefile  README.md  ft_atoi.c  ft_atoibase.c  ft_bzero.c  ft_charsrc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_itoa.c  ft_memalloc.c  ft_memset.c  ft_nbrdig.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putstr.c  ft_putstr_fd.c  ft_putstrarray.c  ft_str_is_something.c  ft_strclr.c  ft_strcpy.c  ft_strlen.c  ft_strnew.c  ft_strreplace.c  ft_strsplit.c
ft_fprintf/: CMakeLists.txt  Makefile  custom_func.c  utils.c
ft_fprintf/include/: ft_fprintf.h
ft_fprintf/src/: apply_flags.c  custom_func.c  ft_fprintf.c  get_alpha.c  get_numeric.c  utils.c
include/: libft.h
includes/: ft_fprintf.h  libft.h
src/: ft_atoi.c  ft_bzero.c  ft_charsrc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_itoa.c  ft_itoabase.c  ft_memalloc.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memset.c  ft_nbrdig.c  ft_power.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_str_is_something.c  ft_strcat.c  ft_strchr.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  ft_strequ.c  ft_strjoinfree.c  ft_strlen.c  ft_strncpy.c  ft_strnew.c  ft_strreplace.c  (+5 more)
